fix schema for tools
