# swagger.json
@@ -546,10 +546,7 @@
                   "power_source": {
                     "example": "any"
                   },
-                  "voltage": {
-                    "example": "any"
-                  },
-                  "rpm": {
+                  "specifications": {
                     "example": "any"
                   },
                   "description": {
@@ -601,8 +598,8 @@
         "tags": [
           "Tools"
         ],
-        "summary": "Update a existing tool by id",
-        "description": "Update a existing tool in the database by id",
+        "summary": "Update an existing tool by id",
+        "description": "Update an existing tool in the database by id",
         "parameters": [
           {
             "name": "id",
@@ -614,8 +611,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -636,9 +633,6 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "specifications": {
-                    "example": "any"
-                  },
                   "tool": {
                     "example": "any"
                   },
@@ -660,10 +654,7 @@
                   "power_source": {
                     "example": "any"
                   },
-                  "voltage": {
-                    "example": "any"
-                  },
-                  "rpm": {
+                  "specifications": {
                     "example": "any"
                   },
                   "description": {
@@ -697,6 +688,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
